--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,7 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/guava-16.0.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/objectify-4.0.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
