--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/Kent/Downloads/joda-time-2.1-dist/joda-time-2.1/joda-time-2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Kent/Downloads/joda-time-2.1-dist/joda-time-2.1/joda-time-2.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Kent/Downloads/joda-time-2.1-dist/joda-time-2.1/joda-time-2.1-javadoc.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Kent/Downloads/joda-time-2.1-dist/joda-time-2.1/joda-time-2.1-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
@@ -10,7 +10,8 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/guava-16.0.1.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/objectify-4.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/guava-16.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/objectify-4.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Kent/Desktop/apache-commons.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
