--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/Kent/Downloads/joda-time-2.1-dist/joda-time-2.1/joda-time-2.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Kent/Downloads/joda-time-2.1-dist/joda-time-2.1/joda-time-2.1-javadoc.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Kent/Downloads/joda-time-2.1-dist/joda-time-2.1/joda-time-2.1-sources.jar"/>
@@ -12,6 +11,7 @@
 	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/guava-16.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/objectify-4.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/Kent/Desktop/apache-commons.jar"/>
+	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/Kent/Downloads/jai_imageio-1_1-lib-windows-i586-jar/jai_imageio_windows-i586.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
